<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_sound"
        android:title="@string/menu_sound_text"/>
    <item
        android:id="@+id/menu_item_field"
        android:title="@string/menu_field_text">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_normal_field"
                    android:title="@string/normal_field_text"/>
                <item
                    android:id="@+id/menu_item_hard_field"
                    android:title="@string/hard_field_text"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_difficulty"
        android:title="@string/menu_difficulty_text">
        <menu>
            <group
                   android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_easy"
                    android:title="@string/easy_text"/>
                <item
                    android:id="@+id/menu_item_normal"
                    android:title="@string/normal_text"/>
                <item
                    android:id="@+id/menu_item_hard"
                    android:title="@string/hard_text"/>
            </group>
        </menu>
        </item>
    <item
        android:id="@+id/menu_item_style"
        android:title="@string/menu_style_text">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_item_classic"
                    android:title="@string/classic_text"/>
                <item
                    android:id="@+id/menu_item_numbers"
                    android:title="@string/numbers_text"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help_text"/>
    <item
        android:id="@+id/menu_item_show_records"
        android:title="@string/menu_show_records_text"/>
</menu>