<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
              android:padding="6dp"
              android:orientation="horizontal"
              android:baselineAligned="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="28sp"
            android:text="@string/easy_text"
            android:gravity="center_horizontal"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="28sp"
            android:text="@string/normal_text"
            android:gravity="center_horizontal"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="28sp"
            android:text="@string/hard_text"
            android:gravity="center_horizontal"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/difficulty_score_layout"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/easy_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="28sp"
            android:textColor="@color/easyText"
            android:gravity="center_horizontal"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/normal_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="28sp"
            android:textColor="@color/normalText"
            android:gravity="center_horizontal"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded"/>
        <TextView
            android:id="@+id/hard_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="28sp"
            android:textColor="@color/hardText"
            android:gravity="center_horizontal"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>
</LinearLayout>